--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -21,3 +21,28 @@ $bg-light-green: #12B76A;
 $ff-OpenSansRegular: 'OpenSans-Regular';
 $ff-OpenSansSemiBold: 'OpenSans-SemiBold';
 $ff-OpenSansBold: 'OpenSans-Bold';
+
+
+@font-face {
+  font-family: OpenSans-Bold;
+  src: url(../assets/fonts/OpenSans-Bold.ttf);
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: OpenSans-Light;
+  src: url(../assets/fonts/OpenSans-SemiBold.ttf);
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: OpenSans-Regular;
+  src: url(../assets/fonts/OpenSans-Regular.ttf);
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: OpenSans-Medium;
+  src: url(../assets/fonts/OpenSans-Medium.ttf);
+  font-weight: 500;
+}
