--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -69,3 +69,33 @@
     }
   }
 }
+
+@media only screen and (max-width: 700px) {
+  #footer {
+    .container {
+      padding: 0 15px;
+      .wrapper {
+        h1 {
+          font-size: 20px;
+          letter-spacing: -0.6px;
+        }
+        ul {
+          overflow: hidden;
+          display: grid;
+          // background-color: red;
+          grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr !important;
+          grid-template-columns: 1fr 1fr !important;
+          // row-gap: 20px;
+          gap: 20px 10px;
+          li {
+            font-size: 18px;
+
+            a {
+              font-size: 12px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
