--- a/scss/layout/_info.scss
+++ b/scss/layout/_info.scss
@@ -70,6 +70,8 @@ body {
           display: flex;
           flex-wrap: nowrap;
           overflow-x: scroll;
+          align-items: center;
+          justify-content: center;
           gap: 10px;
 
           .card {
@@ -106,6 +108,8 @@ body {
           display: flex;
           flex-wrap: wrap;
           // overflow-x: scroll;
+          align-items: center;
+          justify-content: center;
           gap: 10px;
 
           .card {
